// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`valueInjectionLoader should correctly insert values for basic config 1`] = `
"
      ;globalThis[\\"foo\\"] = \\"bar\\";import * as Sentry from '@sentry/nextjs';
      Sentry.init();
    "
`;

exports[`valueInjectionLoader should correctly insert values with a misplaced directive 1`] = `
"
      ;globalThis[\\"foo\\"] = \\"bar\\";console.log('This will render the directive useless');
      \\"use client\\";



      import * as Sentry from '@sentry/nextjs';
      Sentry.init();
    "
`;

exports[`valueInjectionLoader should correctly insert values with directive 1`] = `
"
      \\"use client\\";globalThis[\\"foo\\"] = \\"bar\\";
      import * as Sentry from '@sentry/nextjs';
      Sentry.init();
    "
`;

exports[`valueInjectionLoader should correctly insert values with directive and block comments 1`] = `
"
      /* test */
      \\"use client\\";;globalThis[\\"foo\\"] = \\"bar\\";
      import * as Sentry from '@sentry/nextjs';
      Sentry.init();
    "
`;

exports[`valueInjectionLoader should correctly insert values with directive and inline comments 1`] = `
"
      // test
      \\"use client\\";;globalThis[\\"foo\\"] = \\"bar\\";
      import * as Sentry from '@sentry/nextjs';
      Sentry.init();
    "
`;

exports[`valueInjectionLoader should correctly insert values with directive and multiline block comments 1`] = `
"
      /*
        test
      */
      \\"use client\\";;globalThis[\\"foo\\"] = \\"bar\\";
      import * as Sentry from '@sentry/nextjs';
      Sentry.init();
    "
`;

exports[`valueInjectionLoader should correctly insert values with directive and multiline block comments and a bunch of whitespace 1`] = `
"
      /*
        test
      */




      \\"use client\\";;globalThis[\\"foo\\"] = \\"bar\\";



      import * as Sentry from '@sentry/nextjs';
      Sentry.init();
    "
`;

exports[`valueInjectionLoader should correctly insert values with directive and semicolon 1`] = `
"
      \\"use client\\";;globalThis[\\"foo\\"] = \\"bar\\";
      import * as Sentry from '@sentry/nextjs';
      Sentry.init();
    "
`;
